added test for creating artist in the DB and created route and controller to pass

--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "node utils/create-database.js test",
+    "test": "mocha tests/**/*.js --exit --recursive --timeout 60000 --file ./tests/test-setup.js",
+    "posttest": "node utils/drop-database.js",
     "prestart": "node utils/create-database.js",
-    "start": "nodemon -r dotenv/config index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "nodemon -r dotenv/config index.js"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tdot124/music-library.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Thomas Mills",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tdot124/music-library/issues"
   },
   "homepage": "https://github.com/tdot124/music-library#readme",
   "devDependencies": {
+    "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
-    "nodemon": "^2.0.19"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "express": "^4.18.1",
